# CivRebuild

./: .gitignore  README.md
Assets/: create_pythonpath.py
Assets/Python/: CvEventManager.py
CoreEngine/: CvPythonExtensions.py  core_paths.py
CoreEngine/CvPythonEngine/: engine.py
CoreEngine/core_config/: constant.py
CvGameCoreDLL/: CMakeLists.txt  CvArtFileMgr.h  CvCity.h  CvDLLEntity.h  CvDLLEntityIFaceBase.h  CvDLLEventReporterIFaceBase.h  CvDLLInterfaceIFaceBase.h  CvDLLWidgetData.h  CvDeal.h  CvDefines.h  CvDepends.h  CvDiploParameters.h  CvDllPythonEvents.h  CvEnums.h  CvFractal.h  CvGame.h  CvGameCoreDLL.h  CvGameCoreUtils.h  CvGameTextMgr.h  CvGlobals.h  CvInfoWater.h  CvInfos.h  CvInitCore.h  CvMap.h  CvMapGenerator.h  CvMessageControl.h  CvMessageData.h  CvPlayer.h  CvPlayerAI.h  CvPlot.h  CvPlotGroup.h  CvPopupReturn.h  CvRandom.h  CvReplayInfo.h  CvSelectionGroup.h  CvStatistics.h  CvString.h  CvStructs.h  CvTalkingHeadMessage.h  CvTeam.h  (+23 more)
Documentation/work_doc/: doc_cpp.md  doc_python.md
Mods/PaxLibertatum/: PaxLibertatum.ini
Mods/PaxLibertatum/Assets/: create_pythonpath.py
Mods/PaxLibertatum/tests/: test_path.py
Mods/RealismInvictus/: RealismInvictus.ini
Mods/RealismInvictus/Assets/: create_pythonpath.py
Mods/RealismInvictus/Assets/Python/: CvAdvisorUtils.py  CvCameraControls.py  CvCustomEventManager.py  CvDebugTools.py  CvDiplomacy.py  CvEventManager.py  CvGameUtils.py  CvMapGeneratorUtil.py  CvPerfTest.py  DomPyHelpers.py  MapScriptTools.py  PitBoss  PyHelpers.py
Mods/RealismInvictus/Assets/Python/Components/: GreatPersonNaming.py
Mods/RealismInvictus/Assets/Python/EntryPoints/: CvTranslator.py  CvWBInterface.py  PbMain.py
Mods/RealismInvictus/Assets/Python/Screens/: CvCorporationScreen.py  CvDawnOfMan.py  CvIntroMovieScreen.py  CvMilitaryAdvisor.py  CvPediaUnitChart.py  CvTechSplashScreen.py  CvWorldBuilderDiplomacyScreen.py  IconGrid.py  TechTree.py
Mods/RealismInvictus/CvGameCoreDLL/: CMakeLists.txt  CvCity.h  CvDLLInterfaceIFaceBase.h  CvDefines.h  CvEnums.h  CvGame.h  CvGameCoreDLL.h  CvGameCoreUtils.h  CvGameTextMgr.h  CvGlobals.h  CvInfoWater.h  CvInfos.h  CvMap.h  CvMapGenerator.h  CvPlayer.h  CvPlayerAI.h  CvPlot.h  CvPlotGroup.h  CvSelectionGroup.h  CvString.h  CvTalkingHeadMessage.h  CvTeamAI.h  CvUnit.h  CvXMLLoadUtility.h  FVariableSystem.h  FVariableSystem.inl
Mods/RealismInvictus/Documentation/work_doc/: doc_cpp.md
Mods/RealismInvictus/PrivateMaps/: Arboria.py  Archipelago.py  Big_and_Small.py  Boreal.py  CommandingHeights.py  Continents.py  Donut.py  Earth2.py  Fantasy_Realm.py  Fractal.py  Global_Highlands.py  Great_Plains.py  Highlands.py  Hub.py  Ice_Age.py  Inland_Sea.py  Jurassic.CivBeyondSwordWBSave  Lakes.py  Maze.py  Medium_and_Small.py  Mirror.py  Oasis.py  Pangaea.py  RI Crusades Scenario.CivBeyondSwordWBSave  RI Deluge Scenario.CivBeyondSwordWBSave  RI Europe Scenario.CivBeyondSwordWBSave  RI Triassic Period Earth Scenario.CivBeyondSwordWBSave  RI World map Huge Scenario.CivBeyondSwordWBSave  RI World map Large Scenario.CivBeyondSwordWBSave  RI_EarthEvolution3_EarthLargeDefault.py  RI_EarthEvolution3_EarthLargeRI.py  RI_PerfectMongoose_v332.py  RI_Planet_Generator.py  RI_Totestra.py  Rainforest.py  RandomScriptMap.py  Ring.py  Team_Battleground.py  Terra.py  Tilted_Axis.py  (+1 more)
Mods/RealismInvictus/tests/: test_map_continents.py  test_path.py
backup/Assets/Python_debug_001_pre_merge_civ4/: PyHelpers.py
backup/CvGameCoreDLL/: cp_ri2bts
tests/: test_path.py
